src/render/snapshots/skill_forge_cli__render__engine__tests__snapshot_of_rendered_cursor_rules.snap
---
source: src/render/engine.rs
expression: output
---
---
description: SkillForge-generated project rules
alwaysApply: true
---

# Cursor Rules

> Generated by SkillForge CLI from `skillforge.yaml`. Edit the config and
> run `skillforge sync` to regenerate.

## Developer Profile

- Style: `practical`
- Explanation style: `tradeoff-based`

## Project Profile

- Project type: `cli-tool`
- Language: `rust`
- Package manager: `cargo`
- Testing tools: `cargo-test`, `insta`
- Security level: `strict`
- Testing level: `practical`
- Dependency policy: `explain-first`
- Architecture style: `simple`

> **Strict security mode.** Treat every change touching auth, validation,
> secrets, permissions, or data access as high-risk by default. Prefer
> stopping to ask over guessing when a security implication is unclear.


## Decision Loop

Before writing any code, work through these questions. Answering them is not
optional overhead — it is how over-engineering gets caught before it happens.

1. Is code actually needed for this request?
2. Can the problem be solved by explaining, configuring, or documenting instead?
3. Can existing code be reused?
4. Can the standard library or native platform feature solve this?
5. Is a new function really necessary?
6. Is a new abstraction really necessary?
7. Is a new dependency really necessary?
8. What is the smallest safe change?
9. Does the change match the developer's configured style?
10. Does the change preserve security, validation, tests, and existing behavior?
11. Should you stop and ask before continuing?


## Workflow Loops

Match the loop to the task. Don't blend them — a bug fix shouldn't turn into
a refactor, and a refactor shouldn't sneak in a feature.

- **Feature Loop** — understand the request, check existing code, plan the
  smallest safe change, implement, verify, stop.
- **Bug Fix Loop** — find the root cause, avoid broad refactors, make the
  smallest fix, add a regression test when practical, verify.
- **Security Loop** — treat auth, validation, secrets, permissions, and
  database changes as high-risk. Preserve safety checks and explain the
  change clearly.
- **Refactor Loop** — only refactor when asked. Preserve behavior. Never mix
  refactor work with feature work.
- **Testing Loop** — add or update tests based on the configured testing
  level, and explain how to run them.
- **Documentation Loop** — update documentation only when setup, commands,
  environment variables, or behavior actually change.


## Stop Rules

- Stop before modifying CI/CD configuration
